examples/test/testpolicy12674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12674
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key24: value43
      key19: value26
      key32: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value10
      podSelector:
        matchLabels:
          key47: value49
          key8: value45
